camera blur radio btn alignment and smart assist issue fix

--- a/vtr-ui/src/app/components/ui/ui-rounded-rectangle-radio/ui-rounded-rectangle-radio.component.scss
+++ b/vtr-ui/src/app/components/ui/ui-rounded-rectangle-radio/ui-rounded-rectangle-radio.component.scss
@@ -54,6 +54,9 @@
 			color: $main;
 			top: 1.5rem;
 			left: 1.5rem;
+			@media #{$mediaquery_19} {
+				left: -8.5rem;
+			}
 		}
 
 		fa-icon.icon {
